--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@fontsource/roboto": "^5.0.8",
     "@mui/icons-material": "^5.15.2",
     "@mui/material": "^5.15.2",
+    "@mui/x-tree-view": "^6.17.0",
     "@uiw/react-split": "^5.9.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
